After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 608896 - mpegtsmux: PAT/PMT interval fixes
mpegtsmux: PAT/PMT interval fixes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
0.10.8
Other Linux
: Normal normal
: 0.10.18
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on: 604908
Blocks:
 
 
Reported: 2010-02-03 15:36 UTC by Marc-Andre Lureau
Modified: 2010-02-04 16:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mpegtsmux: fix PAT/PMT insertion frequency (7.43 KB, patch)
2010-02-03 15:43 UTC, Marc-Andre Lureau
committed Details | Review
mpegtsmux: add pat-interval and pmt-interval properties (5.38 KB, patch)
2010-02-03 15:43 UTC, Marc-Andre Lureau
committed Details | Review
mpegtsmux: add PAT/PMT in streamheader (6.51 KB, patch)
2010-02-03 15:43 UTC, Marc-Andre Lureau
needs-work Details | Review
mpegtsmux: add PAT/PMT in streamheader (4.69 KB, patch)
2010-02-03 17:24 UTC, Marc-Andre Lureau
none Details | Review
mpegtsmux: add PAT/PMT in streamheader (5.40 KB, patch)
2010-02-03 18:16 UTC, Marc-Andre Lureau
none Details | Review
mpegtsmux: add PAT/PMT in streamheader (4.77 KB, patch)
2010-02-03 18:19 UTC, Marc-Andre Lureau
committed Details | Review

Description Marc-Andre Lureau 2010-02-03 15:36:59 UTC
mpegtsmux: fix PAT/PMT insertion frequency
    
    The current code is comparing timestamps with different clock.
    Let's use only the clock for PTS values.
    
    Also rename frequency to interval, to avoid confusion. And remove
    documentation about value 0, which won't work like documented.

    mpegtsmux: add pat-interval and pmt-interval properties

    mpegtsmux: add PAT/PMT in streamheader
Comment 1 Marc-Andre Lureau 2010-02-03 15:41:12 UTC
Here is a test case:

GST_DEBUG=*tsdemux*:5 gst-launch videotestsrc num-buffers=90 ! schroenc ! mpegtsmux  ! identity single-segment=1 ! mpegtsdemux ! fakesink 2>&1 | grep "PAT section" | wc -l
Comment 2 Marc-Andre Lureau 2010-02-03 15:43:38 UTC
Created attachment 152925 [details] [review]
mpegtsmux: fix PAT/PMT insertion frequency

The current code is comparing timestamps with different clock.
Let's use only the clock for PTS values.

Also rename frequency to interval, to avoid confusion. And remove
documentation about value 0, which won't work like documented.
Comment 3 Marc-Andre Lureau 2010-02-03 15:43:42 UTC
Created attachment 152926 [details] [review]
mpegtsmux: add pat-interval and pmt-interval properties
Comment 4 Marc-Andre Lureau 2010-02-03 15:43:46 UTC
Created attachment 152927 [details] [review]
mpegtsmux: add PAT/PMT in streamheader
Comment 5 Marc-Andre Lureau 2010-02-03 15:44:41 UTC
I think some of the patch depends on bug 604908 patch. Adding dep
Comment 6 Marc-Andre Lureau 2010-02-03 16:00:48 UTC
Note: the first patch reduced PAT/PMT overhead by more than 10% for a low bitrate stream (at ~300kb). Said differently, the current mpegtsmux inserts ~100-300x too many PAT/PMT.
Comment 7 Zaheer Abbas Merali 2010-02-03 16:44:38 UTC
Review of attachment 152925 [details] [review]:

looks good
Comment 8 Zaheer Abbas Merali 2010-02-03 16:45:18 UTC
Review of attachment 152926 [details] [review]:

looks good
Comment 9 Zaheer Abbas Merali 2010-02-03 16:50:52 UTC
Review of attachment 152927 [details] [review]:

is_section is misleading. There are many sections in ts, not just the ones you are adding to streamheader (pat and pmt)
Comment 10 Marc-Andre Lureau 2010-02-03 17:24:52 UTC
Created attachment 152943 [details] [review]
mpegtsmux: add PAT/PMT in streamheader

The check for PAT/PMT buffers was suggested by
Zaheer Abbas Merali.
Comment 11 Marc-Andre Lureau 2010-02-03 18:16:31 UTC
Created attachment 152947 [details] [review]
mpegtsmux: add PAT/PMT in streamheader

The check for PAT/PMT buffers was suggested by
Zaheer Abbas Merali.
Comment 12 Marc-Andre Lureau 2010-02-03 18:19:46 UTC
Created attachment 152950 [details] [review]
mpegtsmux: add PAT/PMT in streamheader

The check for PAT/PMT buffers was suggested by
Zaheer Abbas Merali.
Comment 13 Zaheer Abbas Merali 2010-02-03 18:24:55 UTC
Review of attachment 152950 [details] [review]:

looks good
Comment 14 Marc-Andre Lureau 2010-02-04 09:13:15 UTC
the 3 patches have been committed by Zaheer.

closing